--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
 
-    - run: Set-LocalUser -Name "runneradmin" -Password "P@ssw0rd!" -Force
+    - run: Set-LocalUser -Name "user" -Password (ConvertTo-SecureString -AsPlainText "pass" -Force)
 
     - name: Create Tunnel
 
